File Index Upload

--- a/aboutus.html
+++ b/aboutus.html
@@ -68,12 +68,12 @@
 			</div>
 			
 			<div class="abtusimg">
-				<img src="images/ran1.png">
+				<img src="images/ran1.PNG">
 				<h3> Runna Genenov </h3>
 			</div>
 			
 			<div class="abtusimg">
-				<img src="images/ran2.png">
+				<img src="images/ran2.PNG">
 				<h3> Franisca Ruisita </h3>
 			</div>
 		</div>
