--- a/contents.html
+++ b/contents.html
@@ -51,21 +51,21 @@
 		
 		<div class="row">
 			<div class="con">
-				<img src="images/ss.png">
+				<img src="images/ss.PNG">
 				<div class="layer1">
 					<a href="start.html"> <h2> The Solar System  </h2> </a>
 				</div>
 			</div>
 			
 			<div class="con">
-				<img src="images/vidlec.png">
+				<img src="images/vidlec.PNG">
 				<div class="layer1">
 					<a href="lec.html"> <h2> Video Lectures  </h2> </a>
 				</div>
 			</div>
 			
 			<div class="con">
-				<img src="images/articles.png">
+				<img src="images/articles.PNG">
 				<div class="layer1">
 					<a href="articles.html"> <h2> Recent Articles  </h2> </a>
 				</div>
