--- a/lec.html
+++ b/lec.html
@@ -55,21 +55,21 @@ h3{
 		
 		<div class="row">
 			<div class="con">
-				<img src="images/lec1.jpg" height="100%">
+				<img src="images/lec1.JPG" height="100%">
 				<div class="layer1">
 					<a href="https://www.youtube.com/watch?v=libKVRa01L8&t=50s"  target="_blank"> <h2> Solar System 101 | National Geographic </h2> </a>
 				</div>
 			</div>
 			
 			<div class="con">
-				<img src="images/lec2.jpg">
+				<img src="images/lec2.JPG">
 				<div class="layer1">
 					<a href="https://youtu.be/TKM0P3XlMNA" target="_blank"> <h2> Solar System | Crash Course  </h2> </a>
 				</div>
 			</div>
 			
 			<div class="con">
-				<img src="images/lec3.jpg" height="100%">
+				<img src="images/lec3.JPG" height="100%">
 				<div class="layer1">
 					<a href="https://www.youtube.com/watch?v=Qd6nLM2QlWw&t=77s" target="_blank"> <h2> Exploring the Solar System | FreeSchool </h2> </a>
 				</div>
